intel/bench_214/extr_.Craftsrccube.c_make_cube_faces_with_main/log.txt
bench_214/extr_.Craftsrccube.c_make_cube_faces_with_main/extr_.Craftsrccube.c_make_cube_faces_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.Craftsrccube.c_make_cube_faces_with_main/extr_.Craftsrccube.c_make_cube_faces_with_main.c:93:11: error: expected expression
  float (*)[4] ao;
          ^
bench_214/extr_.Craftsrccube.c_make_cube_faces_with_main/extr_.Craftsrccube.c_make_cube_faces_with_main.c:94:11: error: expected expression
  float (*)[4] light;
          ^
bench_214/extr_.Craftsrccube.c_make_cube_faces_with_main/extr_.Craftsrccube.c_make_cube_faces_with_main.c:111:25: error: use of undeclared identifier 'ao'
  make_cube_faces(data, ao, light, left, right, top, bottom, front, back, wleft, wright, wtop, wbottom, wfront, wback, x, y, z, n);
                        ^
bench_214/extr_.Craftsrccube.c_make_cube_faces_with_main/extr_.Craftsrccube.c_make_cube_faces_with_main.c:111:29: error: use of undeclared identifier 'light'
  make_cube_faces(data, ao, light, left, right, top, bottom, front, back, wleft, wright, wtop, wbottom, wfront, wback, x, y, z, n);
                            ^
5 errors generated.
HLS FPGA Parse FAILED.
